@@ -1,4 +1,6 @@
-See:
-* http://code.google.com/p/libfdatetime/wiki/Building
-* README.macosx
+libfdatetime is a library for date and time data types.
+
+For more information see:
+* Project documentation: https://github.com/libyal/libfdatetime/wiki/Home
+* How to build from source: https://github.com/libyal/libfdatetime/wiki/Building
 
